캐릭터 레이드 골드 체크 방식 업데이트 API 도메인 변경